--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "write": "npx prettier --write .",
-        "check-format" : "npx prettier --check ."
+        "check-format": "npx prettier --check ."
     },
     "repository": {
         "type": "git",
@@ -19,6 +19,13 @@
     },
     "homepage": "https://github.com/ClaesF0/workflow-module-2-workflow-HUSKY#readme",
     "devDependencies": {
-        "prettier": "^2.7.1"
+        "husky": "^8.0.1",
+        "prettier": "^2.7.1",
+        "pretty-quick": "^3.1.3"
+    },
+    "husky" : {
+      "hooks" : {
+        "pre-commit": "pretty-quick --staged"
+      }
     }
 }
